Tetris-V2/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetris
  labels:
    app: tetris
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app: argocd
