Tetris-V2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-app
  namespace: tetris
  labels:
    app: tetris
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      serviceAccountName: tetris-sa
      
      containers:
        - name: tetris
          image: 391369718038.dkr.ecr.us-east-1.amazonaws.com/tetris-game:63
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
